<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presenter.ChoseLevelFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_xx"
        android:text="@string/chose_level_title"
        android:textSize="@dimen/text_size_xxx"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xx"
        android:layout_marginEnd="@dimen/margin_xx"
        android:text="@string/test_level_title"/>

    <Button
        android:id="@+id/button_easy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xx"
        android:layout_marginEnd="@dimen/margin_xx"
        android:backgroundTint="@android:color/holo_green_light"
        android:text="@string/easy_level_title"/>

    <Button
        android:id="@+id/button_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xx"
        android:layout_marginEnd="@dimen/margin_xx"
        android:backgroundTint="@android:color/holo_orange_light"
        android:text="@string/normal_level_title"/>

    <Button
        android:id="@+id/button_hard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_xx"
        android:layout_marginEnd="@dimen/margin_xx"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="@string/hard_level_title"/>
</LinearLayout>